antlr/FINParser.py
# Generated from FIN.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class FINParser ( Parser ):

    grammarFileName = "FIN.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'.'", "'('", "')'", "'{'", "'}'", 
                     "'*'", "'/'", "'%'", "'+'", "'-'", "'ohj'", "'lop'", 
                     "'kok'", "'des'", "'tek'", "'tot'", "'jos'", "'muu'", 
                     "'kun'", "'var'", "'do'", "'lue'", "'kir'", "'totta'", 
                     "'vaara'", "'ja'", "'tai'", "'ei'", "'de'", "'ate'", 
                     "':='", "'<='", "'>='", "'=='", "'!='", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "OHJ", "LOP", "KOK", "DES", "TEK", "TOT", "JOS", "MUU", 
                      "KUN", "VAR", "DO", "LUE", "KIR", "TOTTA", "VAARA", 
                      "JA", "TAI", "EI", "DE", "ATE", "ASSIGN", "LE", "GE", 
                      "EQ", "NEQ", "LT", "GT", "NUM", "STR", "ID", "WS", 
                      "COMMENT" ]

    RULE_prog = 0
    RULE_decl = 1
    RULE_tipo = 2
    RULE_cmd = 3
    RULE_cmdAtrib = 4
    RULE_cmdLeitura = 5
    RULE_cmdEscrita = 6
    RULE_cmdIf = 7
    RULE_cmdKun = 8
    RULE_cmdVar = 9
    RULE_cmdDoKun = 10
    RULE_cond = 11
    RULE_opRel = 12
    RULE_opLog = 13
    RULE_expr = 14

    ruleNames =  [ "prog", "decl", "tipo", "cmd", "cmdAtrib", "cmdLeitura", 
                   "cmdEscrita", "cmdIf", "cmdKun", "cmdVar", "cmdDoKun", 
                   "cond", "opRel", "opLog", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    OHJ=12
    LOP=13
    KOK=14
    DES=15
    TEK=16
    TOT=17
    JOS=18
    MUU=19
    KUN=20
    VAR=21
    DO=22
    LUE=23
    KIR=24
    TOTTA=25
    VAARA=26
    JA=27
    TAI=28
    EI=29
    DE=30
    ATE=31
    ASSIGN=32
    LE=33
    GE=34
    EQ=35
    NEQ=36
    LT=37
    GT=38
    NUM=39
    STR=40
    ID=41
    WS=42
    COMMENT=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OHJ(self):
            return self.getToken(FINParser.OHJ, 0)

        def LOP(self):
            return self.getToken(FINParser.LOP, 0)

        def EOF(self):
            return self.getToken(FINParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FINParser.DeclContext)
            else:
                return self.getTypedRuleContext(FINParser.DeclContext,i)


        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FINParser.CmdContext)
            else:
                return self.getTypedRuleContext(FINParser.CmdContext,i)


        def getRuleIndex(self):
            return FINParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = FINParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(FINParser.OHJ)
            self.state = 32 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 31
                self.decl()
                self.state = 34 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FINParser.KOK) | (1 << FINParser.DES) | (1 << FINParser.TEK) | (1 << FINParser.TOT))) != 0)):
                    break

            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.cmd()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FINParser.JOS) | (1 << FINParser.KUN) | (1 << FINParser.VAR) | (1 << FINParser.DO) | (1 << FINParser.LUE) | (1 << FINParser.KIR) | (1 << FINParser.ID))) != 0)):
                    break

            self.state = 41
            self.match(FINParser.LOP)
            self.state = 42
            self.match(FINParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(FINParser.TipoContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FINParser.ID)
            else:
                return self.getToken(FINParser.ID, i)

        def getRuleIndex(self):
            return FINParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = FINParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.tipo()
            self.state = 45
            self.match(FINParser.ID)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FINParser.T__0:
                self.state = 46
                self.match(FINParser.T__0)
                self.state = 47
                self.match(FINParser.ID)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self.match(FINParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KOK(self):
            return self.getToken(FINParser.KOK, 0)

        def DES(self):
            return self.getToken(FINParser.DES, 0)

        def TEK(self):
            return self.getToken(FINParser.TEK, 0)

        def TOT(self):
            return self.getToken(FINParser.TOT, 0)

        def getRuleIndex(self):
            return FINParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = FINParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FINParser.KOK) | (1 << FINParser.DES) | (1 << FINParser.TEK) | (1 << FINParser.TOT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmdAtrib(self):
            return self.getTypedRuleContext(FINParser.CmdAtribContext,0)


        def cmdLeitura(self):
            return self.getTypedRuleContext(FINParser.CmdLeituraContext,0)


        def cmdEscrita(self):
            return self.getTypedRuleContext(FINParser.CmdEscritaContext,0)


        def cmdIf(self):
            return self.getTypedRuleContext(FINParser.CmdIfContext,0)


        def cmdKun(self):
            return self.getTypedRuleContext(FINParser.CmdKunContext,0)


        def cmdVar(self):
            return self.getTypedRuleContext(FINParser.CmdVarContext,0)


        def cmdDoKun(self):
            return self.getTypedRuleContext(FINParser.CmdDoKunContext,0)


        def getRuleIndex(self):
            return FINParser.RULE_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd" ):
                listener.enterCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd" ):
                listener.exitCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd" ):
                return visitor.visitCmd(self)
            else:
                return visitor.visitChildren(self)




    def cmd(self):

        localctx = FINParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_cmd)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FINParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.cmdAtrib()
                pass
            elif token in [FINParser.LUE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.cmdLeitura()
                pass
            elif token in [FINParser.KIR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.cmdEscrita()
                pass
            elif token in [FINParser.JOS]:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.cmdIf()
                pass
            elif token in [FINParser.KUN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 61
                self.cmdKun()
                pass
            elif token in [FINParser.VAR]:
                self.enterOuterAlt(localctx, 6)
                self.state = 62
                self.cmdVar()
                pass
            elif token in [FINParser.DO]:
                self.enterOuterAlt(localctx, 7)
                self.state = 63
                self.cmdDoKun()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdAtribContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FINParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(FINParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(FINParser.ExprContext,0)


        def getRuleIndex(self):
            return FINParser.RULE_cmdAtrib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdAtrib" ):
                listener.enterCmdAtrib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdAtrib" ):
                listener.exitCmdAtrib(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdAtrib" ):
                return visitor.visitCmdAtrib(self)
            else:
                return visitor.visitChildren(self)




    def cmdAtrib(self):

        localctx = FINParser.CmdAtribContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cmdAtrib)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(FINParser.ID)
            self.state = 67
            self.match(FINParser.ASSIGN)
            self.state = 68
            self.expr(0)
            self.state = 69
            self.match(FINParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdLeituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LUE(self):
            return self.getToken(FINParser.LUE, 0)

        def ID(self):
            return self.getToken(FINParser.ID, 0)

        def getRuleIndex(self):
            return FINParser.RULE_cmdLeitura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdLeitura" ):
                listener.enterCmdLeitura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdLeitura" ):
                listener.exitCmdLeitura(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdLeitura" ):
                return visitor.visitCmdLeitura(self)
            else:
                return visitor.visitChildren(self)




    def cmdLeitura(self):

        localctx = FINParser.CmdLeituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cmdLeitura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(FINParser.LUE)
            self.state = 72
            self.match(FINParser.T__2)
            self.state = 73
            self.match(FINParser.ID)
            self.state = 74
            self.match(FINParser.T__3)
            self.state = 75
            self.match(FINParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdEscritaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KIR(self):
            return self.getToken(FINParser.KIR, 0)

        def expr(self):
            return self.getTypedRuleContext(FINParser.ExprContext,0)


        def getRuleIndex(self):
            return FINParser.RULE_cmdEscrita

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdEscrita" ):
                listener.enterCmdEscrita(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdEscrita" ):
                listener.exitCmdEscrita(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdEscrita" ):
                return visitor.visitCmdEscrita(self)
            else:
                return visitor.visitChildren(self)




    def cmdEscrita(self):

        localctx = FINParser.CmdEscritaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cmdEscrita)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(FINParser.KIR)
            self.state = 78
            self.match(FINParser.T__2)
            self.state = 79
            self.expr(0)
            self.state = 80
            self.match(FINParser.T__3)
            self.state = 81
            self.match(FINParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdIfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JOS(self):
            return self.getToken(FINParser.JOS, 0)

        def cond(self):
            return self.getTypedRuleContext(FINParser.CondContext,0)


        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FINParser.CmdContext)
            else:
                return self.getTypedRuleContext(FINParser.CmdContext,i)


        def MUU(self):
            return self.getToken(FINParser.MUU, 0)

        def getRuleIndex(self):
            return FINParser.RULE_cmdIf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdIf" ):
                listener.enterCmdIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdIf" ):
                listener.exitCmdIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdIf" ):
                return visitor.visitCmdIf(self)
            else:
                return visitor.visitChildren(self)




    def cmdIf(self):

        localctx = FINParser.CmdIfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cmdIf)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(FINParser.JOS)
            self.state = 84
            self.match(FINParser.T__2)
            self.state = 85
            self.cond()
            self.state = 86
            self.match(FINParser.T__3)
            self.state = 87
            self.match(FINParser.T__4)
            self.state = 89 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self.cmd()
                self.state = 91 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FINParser.JOS) | (1 << FINParser.KUN) | (1 << FINParser.VAR) | (1 << FINParser.DO) | (1 << FINParser.LUE) | (1 << FINParser.KIR) | (1 << FINParser.ID))) != 0)):
                    break

            self.state = 93
            self.match(FINParser.T__5)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FINParser.MUU:
                self.state = 94
                self.match(FINParser.MUU)
                self.state = 95
                self.match(FINParser.T__4)
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 96
                    self.cmd()
                    self.state = 99 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FINParser.JOS) | (1 << FINParser.KUN) | (1 << FINParser.VAR) | (1 << FINParser.DO) | (1 << FINParser.LUE) | (1 << FINParser.KIR) | (1 << FINParser.ID))) != 0)):
                        break

                self.state = 101
                self.match(FINParser.T__5)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdKunContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KUN(self):
            return self.getToken(FINParser.KUN, 0)

        def cond(self):
            return self.getTypedRuleContext(FINParser.CondContext,0)


        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FINParser.CmdContext)
            else:
                return self.getTypedRuleContext(FINParser.CmdContext,i)


        def getRuleIndex(self):
            return FINParser.RULE_cmdKun

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdKun" ):
                listener.enterCmdKun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdKun" ):
                listener.exitCmdKun(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdKun" ):
                return visitor.visitCmdKun(self)
            else:
                return visitor.visitChildren(self)




    def cmdKun(self):

        localctx = FINParser.CmdKunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cmdKun)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(FINParser.KUN)
            self.state = 106
            self.match(FINParser.T__2)
            self.state = 107
            self.cond()
            self.state = 108
            self.match(FINParser.T__3)
            self.state = 109
            self.match(FINParser.T__4)
            self.state = 111 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 110
                self.cmd()
                self.state = 113 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FINParser.JOS) | (1 << FINParser.KUN) | (1 << FINParser.VAR) | (1 << FINParser.DO) | (1 << FINParser.LUE) | (1 << FINParser.KIR) | (1 << FINParser.ID))) != 0)):
                    break

            self.state = 115
            self.match(FINParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(FINParser.VAR, 0)

        def ID(self):
            return self.getToken(FINParser.ID, 0)

        def DE(self):
            return self.getToken(FINParser.DE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FINParser.ExprContext)
            else:
                return self.getTypedRuleContext(FINParser.ExprContext,i)


        def ATE(self):
            return self.getToken(FINParser.ATE, 0)

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FINParser.CmdContext)
            else:
                return self.getTypedRuleContext(FINParser.CmdContext,i)


        def getRuleIndex(self):
            return FINParser.RULE_cmdVar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdVar" ):
                listener.enterCmdVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdVar" ):
                listener.exitCmdVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdVar" ):
                return visitor.visitCmdVar(self)
            else:
                return visitor.visitChildren(self)




    def cmdVar(self):

        localctx = FINParser.CmdVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cmdVar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(FINParser.VAR)
            self.state = 118
            self.match(FINParser.ID)
            self.state = 119
            self.match(FINParser.DE)
            self.state = 120
            self.expr(0)
            self.state = 121
            self.match(FINParser.ATE)
            self.state = 122
            self.expr(0)
            self.state = 123
            self.match(FINParser.T__4)
            self.state = 125 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 124
                self.cmd()
                self.state = 127 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FINParser.JOS) | (1 << FINParser.KUN) | (1 << FINParser.VAR) | (1 << FINParser.DO) | (1 << FINParser.LUE) | (1 << FINParser.KIR) | (1 << FINParser.ID))) != 0)):
                    break

            self.state = 129
            self.match(FINParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdDoKunContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(FINParser.DO, 0)

        def KUN(self):
            return self.getToken(FINParser.KUN, 0)

        def cond(self):
            return self.getTypedRuleContext(FINParser.CondContext,0)


        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FINParser.CmdContext)
            else:
                return self.getTypedRuleContext(FINParser.CmdContext,i)


        def getRuleIndex(self):
            return FINParser.RULE_cmdDoKun

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdDoKun" ):
                listener.enterCmdDoKun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdDoKun" ):
                listener.exitCmdDoKun(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdDoKun" ):
                return visitor.visitCmdDoKun(self)
            else:
                return visitor.visitChildren(self)




    def cmdDoKun(self):

        localctx = FINParser.CmdDoKunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cmdDoKun)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(FINParser.DO)
            self.state = 132
            self.match(FINParser.T__4)
            self.state = 134 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 133
                self.cmd()
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FINParser.JOS) | (1 << FINParser.KUN) | (1 << FINParser.VAR) | (1 << FINParser.DO) | (1 << FINParser.LUE) | (1 << FINParser.KIR) | (1 << FINParser.ID))) != 0)):
                    break

            self.state = 138
            self.match(FINParser.T__5)
            self.state = 139
            self.match(FINParser.KUN)
            self.state = 140
            self.match(FINParser.T__2)
            self.state = 141
            self.cond()
            self.state = 142
            self.match(FINParser.T__3)
            self.state = 143
            self.match(FINParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FINParser.RULE_cond

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CondNaoContext(CondContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FINParser.CondContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EI(self):
            return self.getToken(FINParser.EI, 0)
        def expr(self):
            return self.getTypedRuleContext(FINParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondNao" ):
                listener.enterCondNao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondNao" ):
                listener.exitCondNao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondNao" ):
                return visitor.visitCondNao(self)
            else:
                return visitor.visitChildren(self)


    class CondRelContext(CondContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FINParser.CondContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FINParser.ExprContext)
            else:
                return self.getTypedRuleContext(FINParser.ExprContext,i)

        def opRel(self):
            return self.getTypedRuleContext(FINParser.OpRelContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondRel" ):
                listener.enterCondRel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondRel" ):
                listener.exitCondRel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondRel" ):
                return visitor.visitCondRel(self)
            else:
                return visitor.visitChildren(self)


    class CondLogContext(CondContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FINParser.CondContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FINParser.ExprContext)
            else:
                return self.getTypedRuleContext(FINParser.ExprContext,i)

        def opLog(self):
            return self.getTypedRuleContext(FINParser.OpLogContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondLog" ):
                listener.enterCondLog(self)
